--- a/README
+++ b/README
@@ -1,2 +1,6 @@
-This is a repo for Mantissa-Hep dayabay project
-Contains: 
+Instructions for running on Cori:
+
+* module load python
+* module load scikit-learn
+* module load neon/1.1.0
+* python conv_ae_dayabay.py --epochs <number of epochs>
