put data_loaders updates in util/data_loaders.py

--- a/conv_ae_dayabay.ipynb
+++ b/conv_ae_dayabay.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 109,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 110,
    "metadata": {
     "collapsed": false
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 111,
    "metadata": {
     "collapsed": true
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 112,
    "metadata": {
     "collapsed": false
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 113,
    "metadata": {
     "collapsed": true
    },
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 114,
    "metadata": {
     "collapsed": false
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 115,
    "metadata": {
     "collapsed": false
    },
@@ -87,11 +87,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 116,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "//anaconda/lib/python2.7/site-packages/matplotlib/__init__.py:1350: UserWarning:  This call to matplotlib.use() has no effect\n",
+      "because the backend has already been chosen;\n",
+      "matplotlib.use() must be called *before* pylab, matplotlib.pyplot,\n",
+      "or matplotlib.backends is imported for the first time.\n",
+      "\n",
+      "  warnings.warn(_use_error_msg)\n"
+     ]
+    }
+   ],
    "source": [
     "__author__ = 'racah'\n",
     "import os\n",
@@ -111,12 +124,12 @@
     "from util.helper_fxns import adjust_train_val_test_sizes\n",
     "\n",
     "\n",
-    "#from util.data_loaders import load_dayabay_conv"
+    "from util.data_loaders import load_dayabay_conv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 117,
    "metadata": {
     "collapsed": true
    },
@@ -131,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 118,
    "metadata": {
     "collapsed": false
    },
@@ -193,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 119,
    "metadata": {
     "collapsed": false
    },
@@ -207,146 +220,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "# Evan Racah\n",
-    "import h5py\n",
-    "#from sklearn.preprocessing import StandardScaler\n",
-    "import numpy as np\n",
-    "import pickle\n",
-    "import glob\n",
-    "import os\n",
-    "from os.path import join\n",
-    "\n",
-    "from operator import mul\n",
-    "\n",
-    "def filter_out_zeros(X,y):\n",
-    "    \n",
-    "    #get indices of all rows that don't contain all zeroes\n",
-    "    nonzero_rows = ~np.all(X[:, : ]==0., axis=1)\n",
-    "    \n",
-    "    #filter for these nonzero rows\n",
-    "    X = X[nonzero_rows]\n",
-    "    y = y[nonzero_rows]\n",
-    "    return X,y\n",
-    "\n",
-    "def get_equal_per_class(X,y, nclass):\n",
-    "#     #get the number of rows in X that correspond to a y for each given class, then take the class that \n",
-    "#     #corresponds to the fewest rows in X\n",
-    "#     min_classes = [X[y == float(cl)].shape[0] for cl in range(nclass)]\n",
-    "#     print min_classes\n",
-    "#     min_class_count = min(min_classes)\n",
-    "#     #get min_class_count rows of X for each corresponding class\n",
-    "#     print y.shape\n",
-    "#     X = np.vstack(tuple([X[y == float(cl)][:min_class_count, :] for cl in range(nclass)]))\n",
-    "#     y = np.vstack(tuple([y[y == float(cl)][:min_class_count] for cl in range(nclass)]))\n",
-    "#     print y.shape\n",
-    "    \n",
-    "    return X,y\n",
-    "\n",
-    "\n",
-    "def make_divisible_by_batch_size(X,y,batch_size):\n",
-    "    if batch_size:\n",
-    "        num = batch_size * (X.shape[0] / batch_size)\n",
-    "        X = X[:num]\n",
-    "        y = y[:num]\n",
-    "    return X, y\n",
-    "\n",
-    "def split_dataset_in_2(X, y, proportion, seed=3, batch_size=None):\n",
-    "    \n",
-    "    #make indices for every row\n",
-    "    num_ex = X.shape[0]\n",
-    "    i = np.arange(X.shape[0])\n",
-    "    \n",
-    "    #shuffle the indices\n",
-    "    #no shuffle. file is already shuffled \n",
-    "    #np.random.RandomState(seed).shuffle(i)\n",
-    "    \n",
-    "    #allocate proportion*100 percent of the indices for first dataset\n",
-    "    #and the rest for second\n",
-    "    first_inds = i[:proportion * num_ex]\n",
-    "    second_inds = i[proportion * num_ex:]\n",
-    "    \n",
-    "    #indexes the correct rows from X and y and make sure the number of examples is divisible batch size so no weird erros\n",
-    "    #with X and y\n",
-    "    X_first, y_first = make_divisible_by_batch_size(X[first_inds], y[first_inds].reshape(first_inds.shape[0]), batch_size)\n",
-    "    X_second, y_second = make_divisible_by_batch_size(X[second_inds], y[second_inds].reshape(second_inds.shape[0]), batch_size)\n",
-    "    \n",
-    "    return X_first, y_first, X_second, y_second\n",
-    "\n",
-    "\n",
-    "def do_geom_preproc(X):\n",
-    "    X = X.reshape(X.shape[0],8,24)\n",
-    "    #pad the right w ith the first filter_size-1 columns from the left\n",
-    "    X_p = np.lib.pad(X, ((0, 0), (0, 0), (0, filter_size - 1)), 'wrap')\n",
-    "\n",
-    "    #add another 8,24 array that is shifted by 12\n",
-    "    X_s_p = np.lib.pad(X_p, ((0,0), (0,0), (0, 11)), 'wrap')[:,:,11:]\n",
-    "    X_t = np.hstack((X_p, X_s_p))\n",
-    "\n",
-    "    #flatten\n",
-    "    X_t = X_t.reshape(X_t.shape[0], reduce(mul, X_t.shape[1:]))\n",
-    "    return X_t\n",
-    "\n",
-    "def mean_subtract_unit_var(X):\n",
-    "    X -= np.mean(X)\n",
-    "    X /= np.std(X)\n",
-    "    return X\n",
-    "    \n",
-    "\n",
-    "def load_dayabay_conv(path,geom_preproc=False,filter_size=3, just_test=False, test_prop=0.2, validation=True, val_prop=0.2, seed=3, get_y=True, eq_class=True, tr_size=None, batch_size=None):\n",
-    "    '''Expects hdf5 with\n",
-    "            dataset inputs: (n,192+), where first 192 columns are the charge deposits\n",
-    "            dataset label_one_hot: (n,5), where each row is a one hot encoding of the class (1-5)'''\n",
-    "    nclass=5\n",
-    "    \n",
-    "    h5_dataset = h5py.File(path)\n",
-    "    \n",
-    "    if not tr_size:\n",
-    "        tr_size = h5_dataset['inputs'].shape[0]\n",
-    "        \n",
-    "    X = np.asarray(h5_dataset['inputs'][:tr_size,:192]).astype('float64')\n",
-    "    if get_y:\n",
-    "        y = np.asarray(h5_dataset['targets'][:tr_size]).astype('float64')\n",
-    "\n",
-    "    y = np.argmax(y,axis=1).reshape(y.shape[0],)\n",
-    "    \n",
-    "\n",
-    "    #just to make sure there are no events with all zeroes\n",
-    "    X, y = filter_out_zeros(X,y)\n",
-    "    #X = mean_subtract_unit_var(X)\n",
-    "    \n",
-    "    #do geometry preprocessing\n",
-    "    if geom_preproc:\n",
-    "        X = do_geom_preproc(X)\n",
-    "    \n",
-    "\n",
-    "    #make an equal number of examples for each class\n",
-    "    if eq_class:\n",
-    "        X, y = get_equal_per_class(X, y, nclass)\n",
-    "\n",
-    "\n",
-    "\n",
-    "    #reshape into 8,24\n",
-    "    \n",
-    "    X = X.reshape(X.shape[0], 1, 8, 24)\n",
-    "    \n",
-    "    #split into train and test\n",
-    "    X_test, y_test, X_train, y_train = split_dataset_in_2(X, y, test_prop, seed, batch_size=batch_size)\n",
-    "\n",
-    "\n",
-    "    #split train up again into train and val\n",
-    "    if validation:\n",
-    "         X_val, y_val, X_train, y_train = \\\n",
-    "                split_dataset_in_2(X_train, y_train, val_prop, seed, batch_size=batch_size)\n",
-    "\n",
-    "\n",
-    "    return (X_train, y_train), (X_val,y_val), (X_test, y_test), nclass"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -359,25 +238,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 121,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "128\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#load data from hdf5, preprocess and split into train and test\n",
     "(X_train, y_train), (X_val,y_val), \\\n",
     "(X_test, y_test), nclass = load_dayabay_conv(path=args.h5file, batch_size=args.batch_size)\n",
-    "\n",
-    "print args.batch_size\n",
     "\n",
     "# X_train = X_train[y_train != 4.0]\n",
     "# y_train = y_train[y_train != 4.0]"
@@ -385,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 122,
    "metadata": {
     "collapsed": false
    },
@@ -394,8 +263,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training with 35863 training example\n",
-      "Epoch 0   [Train |████████████████████|  281/281  batches, 6.95 cost, 39.59s]\n"
+      "Training with 48640 training example\n",
+      "Epoch 0   [Train |████████████████████|  380/380  batches, 1.41 cost, 51.86s]\n"
      ]
     }
    ],
