Nootebook version of reading in merged hdf5 file and indexing how many pairs

--- a/ibd_ae.ipynb
+++ b/ibd_ae.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -40,25 +40,14 @@
     "    #class for networks architecture\n",
     "    cae = IBDPairConvAe(epochs=epochs)\n",
     "    \n",
-    "    train, val, test = get_ibd_data(mode=\"normalize\")\n",
+    "    train, val, test = get_ibd_data(tot_num_pairs=1000,mode=\"normalize\")\n",
     "    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "train = train[:256]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -89,37 +78,6 @@
     "    #plot the 2D-projection of the features\n",
     "    v.plot_features(x_pc,save=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 1.,  1.,  1.,  1.])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
