Nootebook version of reading in merged hdf5 file and indexing how many pairs, as well as the code to merge the hdf5 files

--- a/util/data_loaders.ipynb
+++ b/util/data_loaders.ipynb
@@ -2,9 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -15,18 +15,9 @@
     "import pickle\n",
     "import glob\n",
     "import os\n",
-    "from util.helper_fxns import center, scale\n",
-    "from operator import mul"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "from helper_fxns import center, scale\n",
+    "from operator import mul\n",
+    "\n",
     "def load_ibd_pairs(path, train_frac=0.5, valid_frac=0.25, tot_num_pairs=-1):\n",
     "    '''Load up the hdf5 file given into a set of numpy arrays suitable for\n",
     "    convnets.\n",
@@ -49,7 +40,7 @@
     "\n",
     "    train = np.asarray(h5set[:ntrain])\n",
     "    valid = np.asarray(h5set[ntrain:(ntrain + nvalid)])\n",
-    "    test = np.asarray(h5set[(ntrain + nvalid):])\n",
+    "    test = np.asarray(h5set[(ntrain + nvalid):(ntrain + nvalid + ntest)])\n",
     "\n",
     "    imageshape = (4, 8, 24)\n",
     "    nfeatures = reduce(mul, imageshape)\n",
@@ -62,15 +53,11 @@
     "    return (train, valid, test)\n",
     "\n",
     "\n",
-    "def get_ibd_data(path_prefix=\"/global/homes/s/skohn/ml/dayabay-data-conversion/extract_ibd\", mode='standardize',\n",
+    "def get_ibd_data(path_prefix=\"/project/projectdirs/dasrepo/ibd_pairs\", mode='standardize',\n",
     "                tot_num_pairs=-1):\n",
     "    \n",
-    "    h5files = []\n",
-    "\n",
-    "    name = os.path.join(path_prefix,\"ibd_yasu_%d_%d.h5\")\n",
-    "    h5file = name % (i*10000, (i+1)*10000-1)\n",
-    "    train, test, val = load_ibd_pairs(h5file, tot_num_pairs=tot_num_pairs)\n",
-    "\n",
+    "    h5filename = \"all_pairs.h5\"\n",
+    "    train, val, test = load_ibd_pairs(path=os.path.join(path_prefix, h5filename), tot_num_pairs=tot_num_pairs)\n",
     "    center(train)\n",
     "    center(val)\n",
     "    center(test)\n",
@@ -80,6 +67,48 @@
     "    \n",
     "    return train, val, test"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a,b,c = get_ibd_data(tot_num_pairs=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(250, 4, 8, 24)"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
