made a few changes to training loop

--- a/convert_nb_to_scripts.ipynb
+++ b/convert_nb_to_scripts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -14,19 +14,19 @@
       "[TerminalIPythonApp] WARNING | Subcommand `ipython nbconvert` is deprecated and will be removed in future versions.\n",
       "[TerminalIPythonApp] WARNING | You likely want to use `jupyter nbconvert` in the future\n",
       "[NbConvertApp] Converting notebook ./convert_nb_to_scripts.ipynb to script\n",
-      "[NbConvertApp] Writing 986 bytes to ./convert_nb_to_scripts.py\n",
+      "[NbConvertApp] Writing 1044 bytes to ./convert_nb_to_scripts.py\n",
       "[NbConvertApp] Converting notebook ./ev_ibd_ae.ipynb to script\n",
-      "[NbConvertApp] Writing 1566 bytes to ./ev_ibd_ae.py\n",
+      "[NbConvertApp] Writing 2281 bytes to ./ev_ibd_ae.py\n",
       "[NbConvertApp] Converting notebook networks/build_evdcae.ipynb to script\n",
       "[NbConvertApp] Writing 7883 bytes to networks/build_evdcae.py\n",
       "[NbConvertApp] Converting notebook networks/evdcae_net.ipynb to script\n",
       "[NbConvertApp] Writing 2634 bytes to networks/evdcae_net.py\n",
       "[NbConvertApp] Converting notebook networks/print_n_plot.ipynb to script\n",
-      "[NbConvertApp] Writing 3674 bytes to networks/print_n_plot.py\n",
+      "[NbConvertApp] Writing 3989 bytes to networks/print_n_plot.py\n",
       "[NbConvertApp] Converting notebook networks/train_val.ipynb to script\n",
       "[NbConvertApp] Writing 5030 bytes to networks/train_val.py\n",
       "[NbConvertApp] Converting notebook util/helper_fxns.ipynb to script\n",
-      "[NbConvertApp] Writing 648 bytes to util/helper_fxns.py\n",
+      "[NbConvertApp] Writing 1720 bytes to util/helper_fxns.py\n",
       "[NbConvertApp] Converting notebook util/merge_files.ipynb to script\n",
       "[NbConvertApp] Writing 1351 bytes to util/merge_files.py\n"
      ]
@@ -60,7 +60,7 @@
     "!sed -i.bak '/# coding:*/d' ./*.py */*.py\n",
     "\n",
     "!sed -i.bak 's/plt.show()*/pass/g' ./*.py */*.py\n",
-    "\n",
+    "!sed -i.bak 's/# //g' ./*.py\n",
     "! rm *.bak */*.bak\n",
     "! rm convert_nb_to_scripts.py\n"
    ]
