--- a/networks/evdcae_net.ipynb
+++ b/networks/evdcae_net.ipynb
@@ -68,6 +68,7 @@
     "        self.val_fn, \\\n",
     "        self.pred_fn, \\\n",
     "        self.hlayer_fn,\\\n",
+    "        self.salmap_fn,\\\n",
     "        self.network = build_network(**network_kwargs)\n",
     "        \n",
     "        \n",
@@ -78,7 +79,9 @@
     "                             self.network, \n",
     "                             self.train_fn, \n",
     "                             self.val_fn,\n",
+    "                             hlayer_fn = self.hlayer_fn,\n",
     "                             pred_fn = self.pred_fn,\n",
+    "                             salmap_fn = self.salmap_fn,\n",
     "                             **self.train_kwargs)\n",
     "        \n",
     "\n",
@@ -88,6 +91,9 @@
     "\n",
     "    def extract_hidden_layer(self, data):\n",
     "        return self.hlayer_fn(data)\n",
+    "    \n",
+    "    def get_saliency_map(self,data):\n",
+    "        return self.salmap_fn(data)\n",
     "        \n",
     "\n",
     "    def minibatch_iterator(self, x, y):\n",
@@ -120,7 +126,7 @@
     "\n",
     "    hlayer = dca.extract_hidden_layer(x_train)\n",
     "\n",
-    "\n",
+    "#     salmap =\n",
     "\n",
     "    ts = TSNE(perplexity=50).fit_transform(hlayer)\n",
     "\n",
@@ -144,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
