--- a/networks/train_val.ipynb
+++ b/networks/train_val.ipynb
@@ -2,11 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "importing Jupyter notebook from print_n_plot.ipynb\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import lasagne\n",
@@ -15,7 +23,7 @@
     "\n",
     "import sys\n",
     "sys.meta_path.append(NotebookFinder())\n",
-    "from print_n_plot import print_train_results,plot_learn_curve,print_val_results, plot_reconstruction\n",
+    "from print_n_plot import print_train_results,plot_learn_curve,print_val_results, plot_reconstruction, calc_plot_n_save_tsne\n",
     "from matplotlib import pyplot as plt\n",
     "%matplotlib inline"
    ]
@@ -31,7 +39,7 @@
     "#TODO: adding logging\n",
     "#TODO add special way of saving run info based on run number or date or something\n",
     "#TODO add getting weights over updates\n",
-    "def train(datasets,network,train_fn, val_fn,pred_fn=None, num_epochs=50, save_weights=False, save_plots=True, save_path='./results',\n",
+    "def train(datasets,network,train_fn, val_fn,hlayer_fn=None,pred_fn=None,salmap_fn=None, num_epochs=50, save_weights=False, save_plots=True, save_path='./results',\n",
     "          batchsize=128, network_kwargs={}, load_path=None):\n",
     "    \n",
     "    \"\"\"Train function\n",
@@ -66,6 +74,9 @@
     "        if epoch % 10 == 0:\n",
     "            plot_learn_curve(train_errs,val_errs, 'err', save_plots=save_plots,path=save_path)\n",
     "            plot_learn_curve(train_accs,val_accs, 'acc', save_plots=save_plots, path=save_path)\n",
+    "            if hlayer_fn:\n",
+    "                hlayer = hlayer_fn(x_tr)\n",
+    "                calc_plot_n_save_tsne(x_train=x_tr, hlayer=hlayer, run_dir=save_path)\n",
     "            if pred_fn:\n",
     "                rec = pred_fn(x_tr)\n",
     "                n_ims = rec.shape[0]\n",
@@ -74,6 +85,18 @@
     "                plot_reconstruction(x_tr[:,0], rec[:,0], indx=25,save=save_plots,  path=save_path)\n",
     "                plot_reconstruction(x_tr[:,0], rec[:,0], indx=50,save=save_plots,  path=save_path)\n",
     "                plot_reconstruction(x_tr[:,0], rec[:,0], indx=n_ims-1,save=save_plots,  path=save_path)\n",
+    "            if salmap_fn:\n",
+    "                sal = salmap_fn(x_tr)\n",
+    "                plt.figure(47)\n",
+    "                plt.imshow(x_tr[0,0], interpolation='none')\n",
+    "                plt.savefig(save_path + '/orig_nosal.png' )\n",
+    "                plt.show()\n",
+    "                plt.figure(48)\n",
+    "                plt.imshow(np.abs(sal[0,0]),interpolation='none', cmap='gray')\n",
+    "                plt.savefig(save_path + '/sal.png')\n",
+    "                plt.show()\n",
+    "                \n",
+    "                \n",
     "            #plot weights or updates or something \n",
     "            \n",
     "            \n",
@@ -162,9 +185,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "deeplearning",
    "language": "python",
-   "name": "python2"
+   "name": "deeplearning"
   },
   "language_info": {
    "codemirror_mode": {
