--- a/networks/build_evdcae.ipynb
+++ b/networks/build_evdcae.ipynb
@@ -6,7 +6,19 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "No module named util.data_loaders",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0mTraceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-b1c748cc05f8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mnbfinder\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mNotebookFinder\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0msys\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmeta_path\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mNotebookFinder\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mutil\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata_loaders\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mload_ibd_pairs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mget_ibd_data\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m: No module named util.data_loaders"
+     ]
+    }
+   ],
    "source": [
     "import lasagne\n",
     "from lasagne import layers as L\n",
@@ -23,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -51,7 +63,7 @@
     "    \n",
     "    \n",
     "    \n",
-    "    #input var is (n_ex x 4 x 8 x 24)\n",
+    "    #input var is (n_ex x 2 x 8 x 24)\n",
     "    network = L.InputLayer(shape=input_shape, input_var=corrup_input)\n",
     "    print network.get_output_shape_for(input_shape)\n",
     "    #output of this is num_filters x 11 x 12\n",
@@ -118,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -158,31 +170,26 @@
     "            param_values = [f['arr_%d' % i] for i in range(len(f.files))]\n",
     "            lasagne.layers.set_all_param_values(network, param_values)\n",
     "\n",
-    "    # Create a loss expression for training, i.e., a scalar objective we want\n",
-    "    # to minimize (for our multi-class problem, it is the cross-entropy loss):\n",
+    "\n",
     "    prediction = lasagne.layers.get_output(network, deterministic=False)\n",
-    "    hid_layer_output = lasagne.layers.get_output(hid_layer, deterministic=False)\n",
+    "    hid_layer_output = lasagne.layers.get_output(hid_layer, deterministic=True)\n",
     "    loss = lasagne.objectives.squared_error(prediction, target_var)\n",
     "    loss = loss.mean()\n",
     "    \n",
     "  \n",
     "\n",
-    "    # Create update expressions for training, i.e., how to modify the\n",
-    "    # parameters at each training step\n",
     "    params = lasagne.layers.get_all_params(network, trainable=True)\n",
     "    updates = lasagne.updates.nesterov_momentum(loss, params, learning_rate=learning_rate, momentum=momentum)\n",
     "\n",
-    "    # Create a loss expression for validation/testing. The crucial difference\n",
-    "    # here is that we do a deterministic forward pass through the network,\n",
-    "    # disabling dropout layers.\n",
+    "\n",
     "    test_prediction = lasagne.layers.get_output(network, deterministic=True)\n",
     "    test_loss = lasagne.objectives.squared_error(test_prediction,\n",
     "                                                                target_var)\n",
     "    test_loss = test_loss.mean()\n",
     "\n",
     "\n",
+    "    salmap = theano.grad(hid_layer_output.sum(), wrt=input_var)\n",
     "\n",
-    "    # maybe do this parzen window/ likelihood thing\n",
     "    test_acc = test_loss \n",
     "\n",
     "\n",
@@ -192,41 +199,27 @@
     "\n",
     "    val_fn = theano.function([input_var, target_var], [test_loss, test_acc])\n",
     "    \n",
-    "    pred_fn = theano.function([input_var], prediction)\n",
+    "    pred_fn = theano.function([input_var], test_prediction)\n",
     "    \n",
-    "    hlayer_fn = theano.function([input_var], lasagne.layers.get_output(hid_layer, deterministic=True) )\n",
+    "    hlayer_fn = theano.function([input_var], hid_layer_output )\n",
+    "    \n",
+    "    salmap_fn = theano.function([input_var], salmap)\n",
     "\n",
-    "    return train_fn, val_fn, pred_fn, hlayer_fn,network"
+    "    return train_fn, val_fn, pred_fn, hlayer_fn, salmap_fn, network"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Building model and compiling functions...\n",
-      "(None, 4, 8, 24)\n",
-      "(None, 128, 11, 12)\n",
-      "(None, 128, 6, 6)\n",
-      "(None, 1024)\n",
-      "(None, 4608)\n",
-      "(None, 128, 6, 6)\n",
-      "(None, 128, 11, 12)\n",
-      "(None, 4, 8, 24)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    #make data\n",
     "    xtr,xv,xte = get_ibd_data(tot_num_pairs=30, preprocess=True)\n",
-    "    train_fn, val_fn, pred_fn, hlayer_fn, network = build_network(input_shape=(None,4,8,24))\n",
+    "    train_fn, val_fn, pred_fn, hlayer_fn, salmap_fn, network = build_network(input_shape=(None,4,8,24))\n",
     "    a=train_fn(xtr,xtr)\n",
     "    b=pred_fn(xtr)\n",
     "    c=hlayer_fn(xtr)"
@@ -308,9 +301,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "deeplearning",
    "language": "python",
-   "name": "python2"
+   "name": "deeplearning"
   },
   "language_info": {
    "codemirror_mode": {
@@ -322,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
