--- a/networks/print_n_plot.ipynb
+++ b/networks/print_n_plot.ipynb
@@ -2427,30 +2427,52 @@
    "outputs": [],
    "source": [
     "\n",
-    "def print_train_results(epoch, num_epochs, start_time, tr_err, tr_acc):\n",
+    "def print_train_results(epoch, num_epochs, start_time, tr_err, tr_acc, logger):\n",
     "    # Then we print the results for this epoch:\n",
-    "    print \"Epoch {} of {} took {:.3f}s\".format(epoch + 1, num_epochs, time.time() - start_time)\n",
-    "    print \"\\ttraining los:\\t\\t{:.4f}\".format(tr_err)\n",
-    "    print \"\\ttraining acc:\\t\\t{:.4f} %\".format(tr_acc * 100)\n",
+    "    logger.info(\"Epoch {} of {} took {:.3f}s\".format(epoch + 1, num_epochs, time.time() - start_time))\n",
+    "    logger.info(\"\\ttraining los:\\t\\t{:.4f}\".format(tr_err))\n",
+    "    logger.info(\"\\ttraining acc:\\t\\t{:.4f} %\".format(tr_acc * 100))\n",
     "\n",
     "\n",
-    "def print_val_results(val_err, val_acc):\n",
-    "    print \"  validation loss:\\t\\t{:.6f}\".format(val_err)\n",
-    "    print \"  validation accuracy:\\t\\t{:.2f} %\".format(val_acc * 100)\n",
+    "def print_val_results(val_err, val_acc, logger):\n",
+    "    logger.info(\"  validation loss:\\t\\t{:.6f}\".format(val_err))\n",
+    "    logger.info(\"  validation accuracy:\\t\\t{:.2f} %\".format(val_acc * 100))\n",
     "\n",
-    "def plot_learn_curve(train_errs_or_accs, val_errs_or_accs, err_or_acc, save_plots, path,mode=''):\n",
+    "def plot_learn_curve(train_errs_or_accs, val_errs_or_accs, val_counter, err_or_acc, save_plots, path):\n",
     "        plt.figure(1 if err_or_acc == 'err' else 2)\n",
     "        plt.clf()\n",
-    "        plt.title('%s Train/Val %s' %(mode,err_or_acc))\n",
+    "        plt.title('Train/Val %s' %(err_or_acc))\n",
     "        plt.plot(train_errs_or_accs, label='train ' + err_or_acc)\n",
-    "        plt.plot(val_errs_or_accs, label='val' + err_or_acc)\n",
+    "        plt.plot(val_counter, val_errs_or_accs, label='val' + err_or_acc)\n",
     "        plt.legend( loc = 'center left', bbox_to_anchor = (1.0, 0.5),\n",
     "           ncol=2)\n",
     "        if save_plots:\n",
-    "            plt.savefig(\"%s/%s_%s_learning_curve.png\"%(path,err_or_acc,mode))\n",
+    "            plt.savefig(\"%s/%s_learning_curve.png\"%(path,err_or_acc))\n",
     "            plt.show()\n",
     "        else:\n",
     "            plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "np.random.randint"
    ]
   },
   {
@@ -2461,27 +2483,22 @@
    },
    "outputs": [],
    "source": [
-    "def plot_reconstruction(x_inp,x_reconstructed,indx=0, save=False, path=''):\n",
-    "    cls= ''\n",
-    "    plt.figure(indx)\n",
+    "def plot_side_by_side(x_inps,x_trans,inds,epoch,mode='rec', save=False, path='', cmap=None):\n",
+    "    num_per_row = 2 # cuz reconstructed and original\n",
     "    plt.clf()\n",
-    "    imo = x_inp[indx]\n",
-    "    dimo = plt.imshow(imo,interpolation='none' )\n",
-    "    plt.colorbar(dimo)\n",
-    "    plt.title('original')\n",
+    "    plt.figure(1, figsize=(60,60))\n",
+    "\n",
+    "    count= 1\n",
+    "    for i in inds:\n",
+    "        sp = plt.subplot(inds.shape[0],num_per_row, count)\n",
+    "        sp.imshow(x_inps[i].reshape(16,24), interpolation='none')\n",
+    "        spr = plt.subplot(inds.shape[0],num_per_row, count + 1)\n",
+    "        spr.imshow(x_trans[i].reshape(16,24), interpolation='none', cmap=cmap)\n",
+    "        count+= 2\n",
+    "    #plt.title('Original on left, Reconstructed on Right. Epoch %i' % (epoch))\n",
     "    if save:\n",
-    "        plt.savefig(\"%s/orig%i.png\"%(path, indx))\n",
-    "        plt.show()\n",
-    "    else:\n",
-    "        plt.show()\n",
-    "    plt.figure(indx+1)\n",
-    "    plt.clf()\n",
-    "    imr = x_reconstructed[indx]\n",
-    "    dimr = plt.imshow(imr,interpolation='none' )\n",
-    "    plt.colorbar(dimr)\n",
-    "    plt.title('reconstructed')\n",
-    "    if save:\n",
-    "        plt.savefig(\"%s/rec%i.png\"%(path, indx))\n",
+    "        plt.savefig(\"%s/epoch_%i_%s.png\"%(path,epoch, mode))\n",
+    "        plt.savefig(\"%s/%s.png\"%(path, mode))\n",
     "        plt.show()\n",
     "    else:\n",
     "        plt.show()"
